added new logo and design updates

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header>
         <nav class="navbar">
             <div class="navbar-content">
-                <a href="index.html" class="logo">AMS QA Limited</a>
+                <a href="index.html" class="logo">
+                    <img src="images/AMS-5.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
+                </a>
                 <button class="mobile-menu-btn">
                     <span></span>
                     <span></span>
@@ -40,7 +42,7 @@
             <div class="expertise-content">
                 <div class="expertise-text">
                     <h2>Digital Transformation Experts</h2>
-                    <p>At AMS QA Limited, we're at the forefront of digital transformation, helping businesses leverage cutting-edge technology to stay competitive in today's fast-paced market.</p>
+                    <p>At AMS we're at the forefront of digital transformation, helping businesses leverage cutting-edge technology to stay competitive in today's fast-paced market.</p>
                     <p>Our team of experts brings decades of experience in AI, automation, and quality assurance to deliver solutions that drive real business value.</p>
                     <ul class="expertise-highlights">
                         <li>Custom AI Solutions</li>
@@ -98,13 +100,30 @@
 
     <footer>
         <div class="footer-content">
-            <h2>Get In Touch</h2>    
-            <div class="contact-info">
-                <p><i class="fas fa-phone"></i> Phone: (+44) 07894 496931</p>
-                <p><i class="fas fa-envelope"></i> Email: info@amsqa.com</p>
-                <p><i class="fas fa-map-marker-alt"></i> Manchester, United Kingdom</p>
+            <div class="footer-section" style="padding-left: 100px;">
+                <img src="images/AMS-5.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
+                <p>© 2025 AMS QA Ltd.<br>All rights reserved.</p>
+            </div>
+            <div class="vertical-divider"></div>
+            <div class="footer-section address-section" style="padding-left: 180px;">
+                <p>7 Chamber House Drive</p>
+                <p>Rochdale</p>
+                <p>Greater Manchester</p>
+                <p>OL11 3LS</p>
+            </div>
+            <div class="vertical-divider"></div>
+            <div class="footer-section">
+                <div class="contact-info">
+                    <p><i class="fas fa-phone"></i> Phone: (+44) 07894 496931</p>
+                    <p><i class="fas fa-envelope"></i> Email: info@amsqa.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Manchester, United Kingdom</p>
+                </div>
             </div>
         </div>
     </footer>
+
+    <div class="footer-bottom">
+        <p>Company registration number: 07734217. VAT number: GB118481805</p>
+    </div>
 </body>
 </html> 
