--- a/index.html
+++ b/index.html
@@ -100,24 +100,22 @@
 
     <footer>
         <div class="footer-content">
-            <div class="footer-section" style="padding-left: 100px;">
+            <div class="footer-section logo-section">
                 <img src="images/AMS-5.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
                 <p>© 2025 AMS QA Ltd.<br>All rights reserved.</p>
             </div>
             <div class="vertical-divider"></div>
-            <div class="footer-section address-section" style="padding-left: 180px;">
-                <p>7 Chamber House Drive</p>
-                <p>Rochdale</p>
-                <p>Greater Manchester</p>
-                <p>OL11 3LS</p>
+            <div class="footer-section address-section">
+                7 Chamber House Drive<br>
+                Rochdale<br>
+                Greater Manchester<br>
+                OL11 3LS
             </div>
             <div class="vertical-divider"></div>
-            <div class="footer-section">
-                <div class="contact-info">
-                    <p><i class="fas fa-phone"></i> Phone: (+44) 07894 496931</p>
-                    <p><i class="fas fa-envelope"></i> Email: info@amsqa.com</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Manchester, United Kingdom</p>
-                </div>
+            <div class="footer-section contact-info">
+                <p><i class="fas fa-phone"></i> Phone: (+44) 07894 496931</p>
+                <p><i class="fas fa-envelope"></i> Email: info@amsqa.com</p>
+                <p><i class="fas fa-map-marker-alt"></i> Manchester, United Kingdom</p>
             </div>
         </div>
     </footer>
