--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <div class="navbar-content">
                 <a href="index.html" class="logo">
-                    <img src="images/AMS-5.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
+                    <img src="images/AMS-10.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
                 </a>
                 <button class="mobile-menu-btn">
                     <span></span>
@@ -88,7 +88,7 @@
         <section class="clients">
             <h2>Trusted By Industry Leaders</h2>
             <p class="clients-subtitle">Partnering with leading companies to deliver exceptional results</p>
-            <div class="logos-section transparent">
+            <div class="logos-section">
                 <img src="images/at.png" alt="AutoTrader" loading="lazy">
                 <img src="images/col_swinton_insurance-on-white.png" alt="Swinton Insurance" loading="lazy">
                 <img src="images/mobysoft.png" alt="Mobysoft" loading="lazy">
@@ -101,11 +101,11 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section logo-section">
-                <img src="images/AMS-5.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
-                <p>© 2025 AMS QA Ltd.<br>All rights reserved.</p>
+                <img src="images/AMS-10.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
+                <p style="padding-left: 26px;">© 2025 AMS QA Ltd.<br>All rights reserved.</p>
             </div>
             <div class="vertical-divider"></div>
-            <div class="footer-section address-section">
+            <div class="footer-section address-section" style="padding-bottom: 4px;">
                 7 Chamber House Drive<br>
                 Rochdale<br>
                 Greater Manchester<br>
@@ -113,9 +113,9 @@
             </div>
             <div class="vertical-divider"></div>
             <div class="footer-section contact-info">
-                <p><i class="fas fa-phone"></i> Phone: (+44) 07894 496931</p>
-                <p><i class="fas fa-envelope"></i> Email: info@amsqa.com</p>
-                <p><i class="fas fa-map-marker-alt"></i> Manchester, United Kingdom</p>
+                <p><i class="fas fa-phone"></i>(+44) 07894 496931</p>
+                <p><i class="fas fa-envelope"></i>info@amsqa.com</p>
+                <p><i class="fas fa-map-marker-alt"></i>Manchester, UK</p>
             </div>
         </div>
     </footer>
