updates services page

--- a/services.html
+++ b/services.html
@@ -13,7 +13,9 @@
     <header>
         <nav class="navbar">
             <div class="navbar-content">
-                <a href="index.html" class="logo">AMS QA Limited</a>
+                <a href="index.html" class="logo">
+                    <img src="images/AMS-10.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
+                </a>
                 <button class="mobile-menu-btn">
                     <span></span>
                     <span></span>
@@ -28,41 +30,110 @@
     </header>
 
     <main>
-        <section class="services-preview">
-            <h2>Our Services</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <i class="fas fa-robot"></i>
-                    <h3>AI Automation</h3>
-                    <p>Leverage the power of artificial intelligence to automate your business processes and drive efficiency.</p>
+       <!-- New Panels Section -->
+        <section class="additional-services-ai">
+            <div class="expertise-content">
+                <div class="expertise-text">
+                    <h2>AI Services</h2>
+                    <p>Boost your productivity and gain a competitive edge with our AI Automation services. We help you identify, design, and implement intelligent solutions that reduce manual tasks, streamline workflows, and uncover new insights. By leveraging cutting-edge technology and strategic expertise, we empower your business to operate more efficiently, innovate faster, and stay ahead in today’s digital landscape.</p>
+                    <ul class="expertise-highlights">
+                        <li>Identify and automate manual tasks to increase efficiency.</li>
+                        <li>Streamline workflows by integrating intelligent solutions.</li>
+                        <li>Uncover critical insights to drive innovation and decision-making.</li>
+                        <li>Stay competitive with cutting-edge AI technology.</li>
+                    </ul>
                 </div>
-                <div class="service-card">
-                    <i class="fas fa-comments"></i>
-                    <h3>Chatbots</h3>
-                    <p>Enhance customer service with intelligent chatbots that work 24/7 to support your customers.</p>
+                <div class="expertise-image">
+                    <img src="images/AI-Image.svg" 
+                         alt="AI Services" 
+                         loading="lazy">
                 </div>
-                <div class="service-card">
-                    <i class="fas fa-laptop-code"></i>
-                    <h3>Websites</h3>
-                    <p>Create stunning, responsive websites that drive engagement and conversions. We focus on user experience and modern design principles.</p>
+            </div>
+        </section>
+
+        <section class="additional-services-chatbots secondary-bg">
+            <div class="expertise-content">
+                <div class="expertise-image">
+                    <img src="images/Chatbots.svg" 
+                         alt="Chatbot Services" 
+                         loading="lazy">
                 </div>
-                <div class="service-card">
-                    <i class="fas fa-vial"></i>
-                    <h3>Automation Testing</h3>
-                    <p>Ensure software quality with comprehensive automated testing solutions. We help you build reliable test frameworks and processes.</p>
+                <div class="expertise-text">
+                    <h2>Chatbot Services</h2>
+                    <p>Elevate your customer interactions and streamline support with our custom chatbot solutions. We design and implement intelligent, conversational agents that engage users, reduce response times, and drive meaningful outcomes. From answering frequently asked questions to capturing leads and processing transactions, our chatbots help you deliver round-the-clock service and foster lasting customer loyalty. Through robust AI-powered systems and seamless platform integration, we empower your business with more efficient, user-friendly communication.</p>
+                    <ul class="expertise-highlights">
+                        <li>FREE two week trial period for your organisation.</li>
+                        <li>Streamline support with quick, 24/7 responses.</li>
+                        <li>Integrate seamless AI solutions for user-friendly interactions.</li>
+                    </ul>
                 </div>
+
+            </div>
+        </section>
+
+        <section class="additional-services-websites">
+            <div class="expertise-content">
+                <div class="expertise-text">
+                    <h2>Automation Testing Services</h2>
+                    <p>Accelerate your release cycles and ensure robust quality with our specialized automation testing solutions using Playwright or Cypress. We design and implement fast, reliable test coverage that integrates seamlessly into your CI/CD workflows, providing continuous feedback and reducing manual overhead. Our expert approach validates even the most complex user journeys, empowering you to ship software with confidence and maintain a competitive edge.</p>
+                    <ul class="expertise-highlights">
+                        <li>Leverage Test Frameworks for powerful end-to-end testing.</li>
+                        <li>Accelerate release cycles with fast, reliable automated tests.</li>
+                        <li>Reduce manual overhead and cut costs.</li>
+                        <li>Integrate seamlessly into CI/CD pipelines.</li>
+                    </ul>
+                </div>
+                <div class="expertise-image">
+                    <img src="images/autotesting.svg" 
+                         alt="Automation Testing Services" 
+                         loading="lazy">
+                </div>
+            </div>
+        </section>
+
+        <section class="additional-services-automation secondary-bg">
+            <div class="expertise-content">
+                <div class="expertise-image">
+                    <img src="images/Websites.svg" 
+                         alt="Website Services" 
+                         loading="lazy">
+                </div>
+                <div class="expertise-text">
+                    <h2>Website Services</h2>
+                    <p>Establish a powerful online presence and captivate your audience with our modern website solutions. We blend clean, responsive designs with intuitive user experiences and robust performance to showcase your brand at its best. From strategic planning to full-scale development, we work closely with you to deliver a seamless digital experience that drives engagement and growth. Let us handle your website needs so you can focus on what matters most—running your business.</p>
+                    <ul class="expertise-highlights">
+                        <li>Craft clean, responsive designs tailored to your brand.</li>
+                        <li>Provide seamless user experiences to engage visitors.</li>
+                        <li>Handle end-to-end development and deployment.</li>
+                    </ul>
+                </div>
+
             </div>
         </section>
     </main>
 
     <footer>
         <div class="footer-content">
-            <h2>Get In Touch</h2>    
-            <div class="contact-info">
-                <p><i class="fas fa-phone"></i> Phone: (+44) 07894 496931</p>
-                <p><i class="fas fa-envelope"></i> Email: info@amsqa.com</p>
-                <p><i class="fas fa-map-marker-alt"></i> Manchester, United Kingdom</p>
+            <div class="footer-section logo-section">
+                <img src="images/AMS-10.svg" alt="AMS QA Limited Logo" loading="lazy" style="height: 80px;">
+                <p>© 2025 AMS QA Ltd.<br>All rights reserved.</p>
             </div>
+            <div class="vertical-divider"></div>
+            <div class="footer-section address-section">
+                7 Chamber House Drive<br>
+                Rochdale<br>
+                Greater Manchester<br>
+                OL11 3LS
+            </div>
+            <div class="vertical-divider"></div>
+            <div class="footer-section contact-info">
+                Phone: (+44) 07894 496931<br>
+                Email: info@amsqa.com<br>
+                <i class="fas fa-map-marker-alt"></i> Manchester, United Kingdom
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Company registration number: 07734217. VAT number: GB118481805</p>
         </div>
     </footer>
 </body>
